// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`implementation AND YET here is another 1`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-29T18:36-04:00",
  "currentFileTime": 132615165702707020,
  "dayOfTheWeek": "Monday",
  "isDayLightSavingsTime": true,
  "ordinalDate": "2021-88",
  "serviceResponse": null,
  "timeZoneName": "Eastern Standard Time",
  "utcOffset": "-04:00:00",
}
`;

exports[`implementation AND YET here is another 2`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-29T18:36-04:00",
  "currentFileTime": 132615165705363140,
  "dayOfTheWeek": "Monday",
  "isDayLightSavingsTime": true,
  "ordinalDate": "2021-88",
  "serviceResponse": null,
  "timeZoneName": "Eastern Standard Time",
  "utcOffset": "-04:00:00",
}
`;

exports[`implementation AND here is another 1`] = `
Object {
  "completed": false,
  "id": 1,
  "title": "delectus aut autem",
  "userId": 1,
}
`;

exports[`implementation Hi here is another 1`] = `
Object {
  "completed": false,
  "id": 1,
  "title": "delectus aut autem",
  "userId": 1,
}
`;

exports[`implementation should not allow external requests in CI 1`] = `
Object {
  "$id": "1",
  "currentDateTime": "2021-03-29T22:36Z",
  "currentFileTime": 132615309695363040,
  "dayOfTheWeek": "Monday",
  "isDayLightSavingsTime": false,
  "ordinalDate": "2021-88",
  "serviceResponse": null,
  "timeZoneName": "UTC",
  "utcOffset": "00:00:00",
}
`;
